...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TuitionCell" rowHeight="89" id="PTQ-AA-X4m" customClass="TuitionCell" customModule="TUMCampusApp" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="44.5" width="375" height="89"/>
                                <autoresizingMask key="autoresizingMask"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xfx-5j-asa" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Cafeterias" image="house" catalog="system" id="RRw-AB-qv3"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="IVM-Bt-bKi">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Bhz-9b-FUx" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Calendar" image="calendar" catalog="system" id="N3e-89-A85"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="8gj-XT-sTE">
...
                            <color key="tintColor" name="tumBlue"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Profile" localized="YES"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Today" id="cpx-zd-HOx">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Jump to Today" localized="YES"/>
...
            <objects>
                <navigationController id="bOC-gY-Bx5" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Lectures" image="studentdesk" catalog="system" id="7hW-Zh-aNm"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="V1O-Hn-4hi">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
...
                                                            </constraints>
                                                        </imageView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TUM.sexy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="
                                                            <rect key="frame" x="37.5" y="0.0" width="288" height="29.5"/>
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
...
                                                            </constraints>
                                                        </imageView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Room Finder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraint
                                                            <rect key="frame" x="37.5" y="0.0" width="288" height="29.5"/>
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
...
                                                    <rect key="frame" x="16" y="8" width="325.5" height="29.5"/>
                                                    <subviews>
                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="News" translatesAutoresizingMaskIntoConstraints="NO" id="w6E-Xv-CYt">
                                                            <rect key="frame" x="0.0" y="0.0" width="29.5" height="29.5"/>
                                                            <constraints>
...
            <objects>
                <navigationController id="zW3-gf-VWs" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Grades" image="checkmark.shield" catalog="system" id="jzO-tR-0Gw"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="sQk-gl-g6q">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
...
            <objects>
                <navigationController id="uAz-ze-7gD" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Study Rooms" image="book" catalog="system" id="V2v-gg-WvC"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="RuT-q5-l6A">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                        <state key="normal" image="chevron.down.circle.fill" catalog="system"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="pointSize">
...
