/* 
  Localizable.strings
  TUM Campus App

  Created by Tim Gymnich on 24.5.20.
  Copyright © 2020 TUM. All rights reserved.
*/

"No Permission" = "No Permission";
"Missing token" = "Missing token";
"Invalid token" = "Invalid token";
"Token not confirmed" = "Token not confirmed";
"Unknown error" = "Unknown error";
"Make sure to enable the right permissions for your token." = "Make sure to enable the right permissions for your token.";
"Go to TUMOnline and confirm the token" = "Go to TUMOnline and confirm the token";
"Try creating a new token." = "Try creating a new token.";
"Continue" = "Continue";
"Login Error" = "Login Error";
"OK" = "OK";
"Authorization Error" = "Authorization Error";
"n/a" = "n/a";
"Calendar" = "Calendar";
"Events" = "Events";
"No Calendar Events" = "No Calendar Events";
"Lectures" = "Lectures";
"Lecture" = "Lecture";
"No Lectures" = "No Lectures";
"Grades" = "Grades";
"No Grades" = "No Grades";
"Tuition fees" = "Tuition fees";
"Amount" = "Amount";
"Deadline" = "Deadline";
"Cafeterias" = "Cafeterias";
"Not logged in" = "Not logged in";
"Sign In" = "Sign In";
"Sign Out" = "Sign Out";
"Study Rooms" = "Study Rooms";
"No Study Rooms" = "No Study Rooms";
"Free" = "Free";
"Occupied until" = "Occupied until";
"Unknown" = "Unknown";
"Useful Links" = "Useful Links";
"No Links" = "No Links";
"Cafeteria Map"  = "Cafeteria Map";
"Search Rooms" = "Search Rooms";
"Roomfinder" = "Roomfinder";
"Unable to find room" = "Unable to find room '%@'";
"No Menu" = "No Menu";
"List View" = "List View";
"Jump to Today" = "Jump to Today";
"GENERAL" = "GENERAL";
"GET IN CONTACT" = "GET IN CONTACT";
"Use build-in Web View" = "Use build-in Web View";
"Join Beta" = "Join Beta";
"TUM Dev on Github" = "TUM Dev on Github";
"Cancel" = "Cancel";
"News" = "News";
"Movies" = "Movies";
"Profile" = "Profile";
"Done" = "Done";
"Places" = "Places";
"My Widgets" = "My Widgets";

"animation showing the token activation" = "animation showing the token activation";
"First 2 letters of TUM ID" = "First 2 letters of TUM ID";
"2 numbers in the middle of TUM ID" = "2 numbers in the middle of TUM ID";
"Last 3 letters of TUM ID" = "Last 3 letters of TUM ID";
"This is a list with " = "This is a list with ";
" entries" = " entries";
"This Button opens a WebView" = "This Button opens a WebView";
"List element" = "List element";
" of " = " of ";

// LoginView
"Welcome to TUM Campus App" = "Welcome to TUM Campus App";
"Enter your TUM ID to get started" = "Enter your TUM ID to get started";
"go" = "go";
"42" = "42";
"tum" = "tum";
"Log in 🎓" = "Log in 🎓";
"Log in" = "Log in";
"Log in Successfull" = "Log in Successfull";
"Next" = "Next";
"Continue without TUM ID" = "Continue without TUM ID";
"Try again" = "Try again";

// TokenConfirmationView
"Back" = "Back";
"Log in on " = "Log in on ";
"Select **Token-Management**" = "Select **Token-Management**";
"Activate the newly created token and enable your desired permissions" = "Activate the newly created token and enable your desired permissions";
"Contact Support" = "Contact Support";
"1" = "1";
"2" = "2";
"3" = "3";
"Are you sure?" = "Are you sure?";
"Leaving now will invalidate the current token!" = "Leaving now will invalidate the current token!";
"Leave" = "Leave";

"Token inactive" = "Token inactive";
"Token active" = "Token active";


// TokenPermissionsView
"You can change your permissions in TUMOnline" = "You can change your permissions in TUMOnline";
"Identification (TUM ID and name)" = "Identification (TUM ID and name)";
"Permissions" = "Permissions";
"You have not granted the following permissions: \n\n" = "You have not granted the following permissions: \n\n";
"\nJust be aware that the app will not fully work without all permissions. You can change the permissions every time in TUMOnline." = "\nJust be aware that the app will not fully work without all permissions. You can change the permissions every time in TUMOnline.";
"Continue anyways" = "Continue anyways";

// ProfileView
"Token Permissions" = "Token Permissions";
"Token Permissions (You are logged out)" = "Token Permissions (You are logged out)";
"Calendar days in week mode" = "Calendar days in week mode";
"Settings" = "Settings";
"This Link leaves the App" = "This Link leaves the App";

//HomeView
"student information" = "student information";
"study rooms, food & calendar" = "study rooms, food & calendar";
"Latest News" = "Latest News";
"Nearest Cafeteria" = "Nearest Cafeteria";
"Nearest Study Room" = "Nearest Study Room";
"No events today" = "No events today";
"View Location" = "View Location";
"rooms free" = "rooms free";
"No rooms free" = "No rooms free";


// CalendarView
"Day" = "Day";
"Week" = "Week";
"Month" = "Month";
"Year" = "Year";
"Today" = "Today";
"This Meeting" = "This Meeting";

// PersonSearch
"Unable to find person" = "Unable to find person";
"Person Search" = "Person Search";

// Tuition
"Open Amount" = "Open Amount";

// LectureSearch
"Lecture Search" = "Lecture Search";
"Unable to find lecture" = "Unable to find lecture";
"Choose Speaker" = "Choose Speaker";
"The search query must be at least 4 characters." = "The search query must be at least 4 characters.";
"Fetching Lectures" = "Fetching Lectures";

// Grades
"Fetching Grades" = "Fetching Grades";
"You seem to not have any grades yet!\n Happy Studying! 🙌" = "You seem to not have any grades yet!\n Happy Studying! 🙌";
"Error while fetching Grades" = "Error while fetching Grades";
"Retry" = "Retry";
"Cancel" = "Cancel";
"Written" = "Written";
"Graded" = "Graded";
"Written/Oral" = "Written/Oral";
"Oral" = "Oral";
"Unknown" = "Unknown";
"Wintersemester" = "Wintersemester";
"Summersemester" = "Summersemester";

// Lectures
"Fetching details of lecture" = "Fetching details of lecture";
"You seem to not have any lectures yet!\n Happy Studying! 🙌" = "You seem to not have any lectures yet!\n Happy Studying! 🙌";
"Error while fetching details of lecture" = "Error while fetching details of lecture";
"Fetching Lectures" = "Fetching Lectures";
"Error while fetching Lectures" = "Error while fetching Lectures";
"Basic lecture information" = "Basic lecture information";
"Detailed lecture information" = "Detailed lecture information";
"Course Contents" = "Course Contents";
"Course Objective" = "Course Objective";
"Note" = "Note";
"Lecture links" = "Lecture links";
"Curriculum" = "Curriculum";
"Dates" = "Dates";
"Exam" = "Exam";
"This Meeting" = "This Meeting";
"Lecture" = "Lecture";
"Exercise" = "Exercise";
"Practical course" = "Practical course";
"Seminar" = "Seminar";
"Lecture with integrated Exercises" = "Lecture with integrated Exercises";

// StudyRoom
"Free" = "Free";
"Occupied until" = "Occupied until";
"Unknown" = "Unknown";

// Roomfinder
"Roomfinder" = "Roomfinder";
"Building" = "Building";
"Room" = "Room";
"Detail" = "Detail";
"Obergeschoß" = "Obergeschoß";
"Room Details" = "Room Details";

// Map
"Search ..." = "Search ...";
"Traffic" = "Traffic";
"Fetching Study Rooms" = "Fetching Study Rooms";
"Fetching Canteens" = "Fetching Canteens";
"Most Searched Rooms" = "Most Searched Rooms";
"View On Maps" = "View On Maps";
"Directions in Maps" = "Directions in Maps";
"Menu" = "Menu";

// Movies
"No more movies this semester 😢\nGet excited for the next season!" = "No more movies this semester 😢\nGet excited for the next season!";

// Error handeling
"The device appears to be offline, please check the internet connectivity" = "The device appears to be offline, please check the internet connectivity";
"Unauthorized to access the resource" = "Unauthorized to access the resource";
"Resource not found" = "Resource not found";
"Server error" = "Server error";
"The accessed data is missing" = "The accessed data is missing";
"Decoding of data failed" = "Decoding of data failed";
"No Permission" = "No Permission";
"Token not confirmed" = "Token not confirmed";
"Token invalid" = "Token invalid";
"Unknown error" = "Unknown error";
"CampusOnline Error" = "CampusOnline Error";

// Analytics Opt-In
"🚀 Support my Bachelor's Thesis" = "🚀 Support my Bachelor's Thesis";
"If you let us temporarily store some anonymized usage data, we can make your TUM Campus App experience even better." = "If you let us temporarily store some anonymized usage data, we can make your TUM Campus App experience even better.";
"Read more" = "Read more";
"Please allow location access while using the app for this to work." = "Please allow location access while using the app for this to work.";
"Learn more" = "Learn more";
"For some selected views, we would like to collect" = "For some selected views, we would like to collect";
"The View" = "The View";
"The view you are looking at. We cannot see any of the content. For example, we can store that you are viewing the Grades screen, but we can never see your grades." = "The view you are looking at. We cannot see any of the content. For example, we can store that you are viewing the Grades screen, but we can never see your grades.";
"The Location" = "The Location";
"Your device location when you are looking at the respective view." = "Your device location when you are looking at the respective view.";
"The Time" = "The Time";
"The date and time when you look at the view." = "The date and time when you look at the view.";
"An Anonymous Identifier" = "An Anonymous Identifier";
"An anonymized identifier. We compute a one-way hash value of your device identifier - your actual device identifier will never leave your device." = "An anonymized identifier. We compute a one-way hash value of your device identifier - your actual device identifier will never leave your device.";
"Why?" = "Why?";
"In the context of my Bachelor's thesis, I aim to implement intelligent widget views that display to you the content you most likely want to see at any given time and location. Ideally, you will see the content you are interested in at one glance - without having to press any buttons." = "In the context of my Bachelor's thesis, I aim to implement intelligent widget views that display to you the content you most likely want to see at any given time and location. Ideally, you will see the content you are interested in at one glance - without having to press any buttons.";
"Sounds good?" = "Sounds good?";
"Share anonymized analytics data" = "Share anonymized analytics data";
"Average Grade:" = "Average Grade:";

// Departures
"Line" = "Line";
"Direction" = "Direction";
"Departure" = "Departure";
"MVV Departures" = "MVV Departures";
"Show Directions" = "Show Directions";
"Walking Distance" = "Walking Distance";
"no departures where found for this station" = "no departures where found for this station";
"walking distance currently unavailable" = "walking distance currently unavailable";
"fetching latest departures" = "fetching latest departures";
"location currently unavailable" = "location currently unavailable";
"min" = "min";
"mins" = "mins";
